--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-detexify.json filter=lfs diff=lfs merge=lfs -text
 NewCMMath-Regular.otf filter=lfs diff=lfs merge=lfs -text
+dataset/detexify filter=lfs diff=lfs merge=lfs -text
+dataset/mathwriting-2024-symbols.tar.zst filter=lfs diff=lfs merge=lfs -text
